Vos modifications locales